--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/viewsite/manage.py",
             "args": [
-                "shell"
+                "test",
+                "logviewer",
             ],
             "django": true
         }
